Fixed the overflow in case of large folders

--- a/src/styles.css
+++ b/src/styles.css
@@ -56,16 +56,13 @@ body {
 main 
 {
     flex: 1;
-    width: 100%;
-    height: 100%;
     border: none;
-}
-
-main {
     display: flex;
 
     height: 100%;
     width: 100%;
+
+    overflow-y: hidden;
 }
 
 .resizer {
@@ -142,6 +139,9 @@ main {
     font-weight: 400;
     line-height: 1.5;
     text-align: left;
+
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .tree .file-tex:hover, .tree .file-pdf:hover {
